add db connection and servlet